[tool.poetry]
name = "paw-lu-github-io-src"
version = "0.1.0"
description = "Source for generating GitHub user page"
authors = ["Paulo S. Costa <pauloscosta5@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "paw_lu"}]

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
