[tool.poetry]
name = "paw-lu-github-io-src"
version = "0.1.0"
description = "Source for generating GitHub user page"
authors = ["Paulo S. Costa <pauloscosta5@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "paw_lu" }]

[tool.poetry.dependencies]
python = "^3.11"
pelican = { extras = ["markdown"], version = "^4.8.0" }

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pyupgrade = "^3.2.2"
mypy = "^0.991"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
